[package]
name = "bertopic-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.17.0", default-features = false, features = [
    "ndarray", "webgpu",
] }
# Pin this getrandom version or everything breaks :(
getrandom = { version = "0.3.2", default-features = false, features = [
    "wasm_js",
] }
leptos = { version = "0.8.2", features = ["csr"] }
trace = "0.1.7"
